# python-datascience-template

./: .gitignore  DATA.md  DEV.md  README.md  environment.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
data/: .gitignore
data/raw/: .gitignore
scripts/: hello_world.py
src/local_funcs/: pyproject.toml
src/local_funcs/src/local_funcs/: __init__.py
tests/: conftest.py  test_local_funcs.py
